--- a/src/components/MyNotes/InitialPage/PocketNotes.module.css
+++ b/src/components/MyNotes/InitialPage/PocketNotes.module.css
@@ -1,10 +1,10 @@
 .container {
-  flex: 1; /* fill parent (mainContent) */
+  flex: 1; 
   background: #dbe8f9;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center; /* centers content vertically */
+  justify-content: center; 
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   position: relative;
@@ -12,7 +12,7 @@
 
 .content {
   max-width: 500px;
-  margin: auto; /* centers horizontally */
+  margin: auto; 
 }
 
 .title {
@@ -36,3 +36,9 @@
   left: 50%;
   transform: translateX(-50%); 
 }
+
+@media screen and (max-width: 1024px) {
+  .container{
+    display: none;
+  }
+} 
