--- a/src/components/CreateGroup/CreateGroupModal.module.css
+++ b/src/components/CreateGroup/CreateGroupModal.module.css
@@ -13,25 +13,25 @@
 
 .modal {
   background: white;
-  padding-left: 19px;
-  padding-right: 19px;
-  padding-bottom: 28px;
-  padding-top: 10px;
+  padding-left: 51px;
+  padding-right: 27px;
+  padding-top: 35px;
+  padding-bottom: 16px;
   border-radius: 8px;
-  width: 284px;
-  height: 211px;
+  width: 740px;
+  height: 317px;
   display: flex;
   flex-direction: column;
 }
 
 .modal h3 {
-  font-size: 18.4px;
+  font-size: 29px;
   font-weight: 500;
-  width: 158px;
-  height: 29px;
+  width: 248px;
+  height: 46px;
   display: flex;
   align-items: center;
-  margin-bottom: 15px;
+  margin-bottom: 17px;
 }
 
 .inputStyle {
@@ -39,63 +39,67 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  margin-bottom: 17px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 35px;
 }
 
 .label1 {
-  width: 87px;
-  height: 23px;
-  font-size: 14.6px;
+  width: 162px;
+  height: 44px;
+  font-size: 27.31px;
   font-weight: 500;
   display: flex;
   align-items: center;
 }
 
 .label2 {
-  width: 101px;
-  height: 23px;
-  font-size: 14.6px;
+  width: 189px;
+  height: 44px;
+  font-size: 27.31px;
   font-weight: 500;
   display: flex;
   align-items: center;
-  /* margin-bottom: 34px; */
 }
 
 .inputContainer {
   border: 2px solid #ccc;
-  border-radius: 11px;
-  width: 150px;
-  height: 23px;
+  border-radius: 22px;
+  width: 435px;
+  height: 51px;
   display: flex;
   align-items: center;
-  padding-left: 10px;
+  padding-left: 28px;
   gap: 10px;
 }
 
 .inputContainer input {
   border: none;
-  font-size: 10px;
-  line-height: 23px;
-  min-width: 85px;
-  height: 16px;
-  line-height: 16px;
+  font-size: 23px;
+  height: 37px;
+  line-height: 37px;
   outline: none;
 }
 
 .inputContainer input::placeholder {
   color: #979797;
-  font-size: 10px;
+  font-size: 23px;
 }
 
 .colorOptions {
   display: flex;
-  gap: 5.3px;
+  gap: 11px;
   margin: 5px 0;
 }
 
 .colorCircle {
-  width: 17.67px;
-  height: 17.67px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -107,6 +111,7 @@
 .createBtn {
   display: flex;
   justify-content: end;
+  margin-top: 38px;
 }
 
 .createBtn button {
@@ -118,16 +123,17 @@
   padding: 4px 27px;
   border-radius: 6px;
   cursor: pointer;
-  font-size: 17px;
-  margin-top: 17px;
+  font-size: 20px;
+  font-weight: 400;
+  margin-top: 0px;
 }
 
 .fab {
   position: fixed;
   bottom: 20px;
   left: 300px;
-  width: 75px;
-  height: 75px;
+  width: 93px;
+  height: 93px;
   border-radius: 50%;
   background: #2d2de8;
   color: white;
@@ -144,81 +150,94 @@
 }
 
 .addIcon {
-  width: 23px;
-  height: 39px;
-  font-size: 40px;
+  width: 39px;
+  height: 68px;
+  font-size: 70px;
 }
 
-@media screen and (min-width: 1024px) {
+/* Small screens (Tablet/Mobile) */
+@media screen and (max-width: 1024px) {
   .modal {
-    width: 740px;
-    height: 317px;
-    padding-left: 51px;
-    padding-right: 51px;
-    padding-bottom: 16px;
-    padding-top: 35px;
+    padding: 10px 0px 10px 0px;
+    width: 284px;
+    height: 211px;
+    display: flex;
+    align-items: center;
   }
 
   .modal h3 {
-    font-size: 29px;
-    width: 248px;
-    height: 46px;
+    font-size: 18.4px;
+    height: 29px;
     margin-bottom: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
   }
 
   .container {
-    gap: 35px;
+    gap: 18px;
   }
 
-  .inputContainer {
-    border-radius: 22px;
-    width: 435px;
-    height: 51px;
-    padding-left: 28px;
-  }
-
-  .inputContainer input {
-    width: auto;
-    height: 37px;
-    line-height: 37px;
-    font-size: 23px;
-  }
-
-  .inputContainer input::placeholder {
-    color: #979797;
-    font-size: 23px;
+  .inputStyle input {
+    font-size: 10px;
+    height: 16px;
+    padding-left: 1px;
+    line-height: 16px;
+    width: 100%;
   }
 
   .label1 {
-    width: 162px;
-    height: 44px;
-    font-size: 27.31px;
+    width: 87px;
+    height: 23px;
+    font-size: 14.6px;
   }
 
   .label2 {
-    width: 189px;
-    height: 44px;
-    font-size: 27.31px;
+    width: 101px;
+    height: 23px;
+    font-size: 14.6px;
+  }
+
+  .inputContainer {
+    border-radius: 11px;
+    width: 150px;
+    height: 23px;
+    padding-left: 10px;
+  }
+
+  .inputContainer input {
+    font-size: 10px;
+    height: 16px;
+    line-height: 16px;
+    width: 100%;
+  }
+
+  .inputContainer input::placeholder {
+    font-size: 10px;
   }
 
   .colorOptions {
-    display: flex;
-    gap: 11px;
+    gap: 5.3px;
   }
 
   .colorCircle {
-    width: 40px;
-    height: 40px;
+    width: 17.67px;
+    height: 17.67px;
+  }
+
+  .createBtn button {
+    font-weight: 400;
+    font-size: 17px;
   }
 
   .fab {
-    width: 93px;
-    height: 93px;
+    width: 75px;
+    height: 75px;
   }
 
   .addIcon {
-    width: 39px;
-    height: 68px;
-    font-size: 70px;
+    width: 23px;
+    height: 39px;
+    font-size: 40px;
   }
 }
