--- a/src/components/MyNotes/InitialPage/PocketNotes.module.css
+++ b/src/components/MyNotes/InitialPage/PocketNotes.module.css
@@ -1,44 +1,52 @@
 .container {
-  flex: 1; 
+  flex: 1;
   background: #dbe8f9;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center; 
+  justify-content: center;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   position: relative;
 }
 
 .content {
-  max-width: 500px;
-  margin: auto; 
+  max-width: 649px;
+  position: absolute;
+  bottom: 235px;
 }
 
 .title {
-  font-size: 22px;
+  font-size: 50px;
   font-weight: bold;
   margin-bottom: 12px;
   color: #000;
 }
 
 .subtitle {
-  font-size: 14px;
+  width: 649px;
+  font-size: 18px;
+  font-weight: 500;
   line-height: 1.5;
-  color: #333;
+  color: #292929;
 }
 
 .footer {
   position: absolute;
   bottom: 20px;
-  font-size: 12px;
-  color: #333;
+  font-size: 18px;
+  font-weight: 400;
+  color: #292929;
   left: 50%;
-  transform: translateX(-50%); 
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
 @media screen and (max-width: 1024px) {
-  .container{
+  .container {
     display: none;
   }
-} 
+}
