--- a/src/components/CreateGroup/CreateGroupModal.module.css
+++ b/src/components/CreateGroup/CreateGroupModal.module.css
@@ -209,7 +209,7 @@
     font-size: 10px;
     height: 16px;
     line-height: 16px;
-    width: 100%;
+    width: 85px;
   }
 
   .inputContainer input::placeholder {
